<resources>
    <string name="application_name">Meal Planner</string>
    <string name="nav_header_title">Meal Planner</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="planning">Planning</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient">Ingredient</string>
    <string name="recipe">Recipe</string>
    <string name="recipes">Recipes</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="my_ingredients">My ingredients</string>
    <string name="manage_ingredients">Manage</string>
    <string name="grocery_list">Grocery list</string>
    <string name="my_recipes">My Meals</string>
    <string name="all_recipes">All Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="more_options">More Options</string>
    <string name="add_to_grocery_list">Add to grocery list</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="recipe_steps_label">Recipe steps:</string>
    <string name="ingredients_list_label">List of ingredients:</string>
    <string name="previous_week">Previous</string>
    <string name="next_week">Next</string>
    <string name="week">Week</string>
</resources>