<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_planning"
            android:icon="@drawable/planning_icon"
            android:title="@string/planning" />
        <item
            android:id="@+id/nav_ingredients"
            android:icon="@drawable/ingredients_icon"
            android:title="@string/ingredients" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/recipe_icon"
            android:title="@string/recipes" />
    </group>

    <group android:id="@+id/menu_group_settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_icon"
            android:title="@string/about" />
    </group>
</menu>