<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/more_icon"
        android:title="@string/more_options"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_about"
                android:title="@string/about" />
            <item
                android:id="@+id/menu_settings"
                android:title="@string/settings" />
        </menu>
    </item>
</menu>